--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -109,6 +109,9 @@ if ( is_file("/var/run/dockerd.pid") && is_dir("/proc/".@file_get_contents("/var
 if ( is_file($caPaths['docker_cfg']) )
   getAllInfo(true,false);
 
+// Drop the attribute cache
+dropAttributeCache();
+
 // Check memory to see if CA's minimums are met (4G same as base OS) - Test is actually for 2.5G though
 
 $memRaw = trim(str_replace("MemTotal:","",exec("cat /proc/meminfo | grep MemTotal:")));
