--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -104,11 +104,10 @@ if ( is_file("/var/run/dockerd.pid") && is_dir("/proc/".@file_get_contents("/var
   unset($caSettings['dockerRunning']);
 }
 
-if ( is_file($caPaths['docker_cfg']) )
-  getAllInfo(true,false);
-
 // Drop the attribute cache
 dropAttributeCache();
+// Drop the docker info cache
+@unlink($caPaths['info']);
 
 // Check memory to see if CA's minimums are met (4G same as base OS) - Test is actually for 2.5G though
 
