--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/azure.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/azure.css
@@ -1,26 +1,26 @@
 :root {
     --template-background: transparent;
-    --template-hover-background: #edeaef;
-    --template-favourite: #e0e0e0;
-    --hr-color: #606e7f;
-    --border-color: #9794a7;
-    --a-color: #486dba;
-    --sidebar-background: #edeaef;
-    --sidebar-text: #606e7f;
+    --template-hover-background: var(--theme-azure--gray-150, var(--ca-light-bg-color));
+    --template-favourite: var(--gray-300, var(--ca-grey-color));
+    --hr-color: var(--theme-azure--cyan-400, var(--ca-dark-blue-color));
+    --border-color: var(--gray-400, var(--ca-grey-color));
+    --a-color: var(--link-text-color, var(--ca-blue-color));
+    --sidebar-background: var(--theme-azure--gray-150, var(--ca-light-bg-color));
+    --sidebar-text: var(--theme-azure--cyan-400, var(--ca-dark-blue-color));
     --beta-popup-offset: 1.5rem;
-    --support-popup-text: #1b1d1b;
-    --support-popup-background: #ffffff;
-    --mod-comment-border: #cf3131;
-    --sidebar-close-background: rgba(0,0,0,0.7);
-    --unraid-66-color: var(--orange-500,#FF8C2F);
-    --link-color: #486dba;
-    --ca-legacy-background-color: var(--background-color,#e8e8e8);
+    --support-popup-text: var(--inverse-text-color, var(--ca-dark-text-color));
+    --support-popup-background: var(--white, var(--ca-white-color));
+    --mod-comment-border: var(--red-800, var(--ca-red-color));
+    --sidebar-close-background: var(--black-opacity-70, var(--ca-overlay-color));
+    --unraid-66-color: var(--orange-500, var(--ca-orange-color));
+    --link-color: var(--link-text-color, var(--ca-blue-color));
+    --ca-legacy-background-color: var(--background-color, var(--ca-legacy-bg-azure));
     --search-area-top: 0;
     --search-area-left: 26.5rem;
     --search-area-mobile-left: 7rem;
     --search-area-mobile-top: 0;
-    --menu-background: var(--background-color,#e8e8e8);
+    --menu-background: var(--background-color, var(--ca-legacy-bg-azure));
     --menu-opacity: 0.7;
-    --tooltipster-content: #101010;
-    --chart-grid: #dddddd;
+    --tooltipster-content: var(--inverse-text-color, var(--ca-dark-text-color));
+    --chart-grid: var(--gray-300, var(--ca-grey-color));
 } 
