--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/gray.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/gray.css
@@ -1,26 +1,26 @@
 :root {
     --template-background: transparent;
-    --template-hover-background: #0c0f0b;
-    --template-favourite: #2b2b2b;
-    --hr-color: #606e7f;
-    --border-color: #606e7f;
-    --a-color: #00b8d6;
-    --sidebar-background: #121510;
-    --sidebar-text: #f2f2f2;
+    --template-hover-background: var(--theme-gray--black-alt, var(--ca-dark-bg-color));
+    --template-favourite: var(--gray-800, var(--ca-medium-dark-color));
+    --hr-color: var(--theme-gray--cyan-300, var(--ca-dark-blue-color));
+    --border-color: var(--theme-gray--cyan-300, var(--ca-dark-blue-color));
+    --a-color: var(--blue-800, var(--ca-blue-color));
+    --sidebar-background: var(--theme-gray--black-alt, var(--ca-dark-bg-color));
+    --sidebar-text: var(--text-color, var(--ca-lighter-text-color));
     --beta-popup-offset: 5rem;
-    --support-popup-text: #1b1d1b;
-    --support-popup-background: #ffffff;
-    --mod-comment-border: #cf3131;
-    --sidebar-close-background: rgba(0,0,0,0.7);
-    --unraid-66-color: var(--orange-500,#FF8C2F);
-    --link-color: #486dba;
-    --ca-legacy-background-color: var(--background-color,#1d1b1b);
+    --support-popup-text: var(--inverse-text-color, var(--ca-dark-text-color));
+    --support-popup-background: var(--white, var(--ca-white-color));
+    --mod-comment-border: var(--red-800, var(--ca-red-color));
+    --sidebar-close-background: var(--black-opacity-70, var(--ca-overlay-color));
+    --unraid-66-color: var(--orange-500, var(--ca-orange-color));
+    --link-color: var(--link-text-color, var(--ca-blue-color));
+    --ca-legacy-background-color: var(--background-color, var(--ca-legacy-bg-dark));
     --search-area-top: 0;
     --search-area-left: 26.5rem;
     --search-area-mobile-left: 7rem;
     --search-area-mobile-top: 0;
-    --menu-background: var(--background-color,#1d1b1b);
+    --menu-background: var(--background-color, var(--ca-legacy-bg-dark));
     --menu-opacity: 0.8;
-    --tooltipster-content: #f2f2f2;
-    --chart-grid: #222222;
+    --tooltipster-content: var(--text-color, var(--ca-lighter-text-color));
+    --chart-grid: var(--gray-800, var(--ca-medium-dark-color));
 } 
