--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/white.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/white.css
@@ -1,26 +1,26 @@
 :root {
-  --template-background: var(--gray-150, var(--ca-lighter-bg-color));
-  --template-hover-background: var(--white, var(--ca-white-color));
-  --template-favourite: var(--gray-300, var(--ca-grey-color));
-  --hr-color: var(--gray-300, var(--ca-grey-color));
-  --border-color: var(--gray-200, var(--ca-grey-color));
-  --a-color: var(--link-text-color, var(--ca-blue-color));
-  --sidebar-background: var(--white, var(--ca-white-color));
-  --sidebar-text: var(--text-color, var(--ca-black-color));
+  --template-background: #f5f5f5;
+  --template-hover-background: #ffffff;
+  --template-favourite: #d0d0d0;
+  --hr-color: lightgrey;
+  --border-color: #e3e3e3;
+  --a-color: #486dba;
+  --sidebar-background: #ffffff;
+  --sidebar-text: #000000;
   --beta-popup-offset: 5rem;
-  --support-popup-text: var(--inverse-text-color, var(--ca-lighter-text-color));
-  --support-popup-background: var(--inverse-background-color, var(--ca-dark-bg-color));
-  --mod-comment-border: var(--red-800, var(--ca-red-color));
-  --sidebar-close-background: var(--black-opacity-70, var(--ca-overlay-color));
-  --unraid-66-color: var(--orange-500, var(--ca-orange-color));
-  --link-color: var(--link-text-color, var(--ca-blue-color));
-  --ca-legacy-background-color: var(--background-color, var(--ca-legacy-bg-white));
+  --support-popup-text: #f2f2f2;
+  --support-popup-background: #1c1b1b;
+  --mod-comment-border: #cf3131;
+  --sidebar-close-background: rgba(0,0,0,0.7);
+  --unraid-66-color: var(--orange-500,#FF8C2F);
+  --link-color: #486dba;
+  --ca-legacy-background-color: var(--background-color,#f2f2f2);
   --search-area-top: 4rem;
   --search-area-left: 19.5rem;
   --search-area-mobile-left: initial;
   --search-area-mobile-top: 0;
-  --menu-background: var(--background-color, var(--ca-legacy-bg-white));
+  --menu-background: var(--background-color,#f2f2f2);
   --menu-opacity: 0.8;
-  --tooltipster-content: var(--text-color, var(--ca-dark-text-color));
-  --chart-grid: var(--gray-300, var(--ca-grey-color));
+  --tooltipster-content: #101010;
+  --chart-grid: #dddddd;
 } 
