--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
@@ -1,32 +1,32 @@
 :root {
-  --template-background: var(--gray-900, var(--ca-dark-bg-color));
-  --template-hover-background: var(--gray-800, var(--ca-medium-bg-color));
-  --template-favourite: var(--gray-700, var(--ca-medium-dark-color));
-  --hr-color: var(--gray-800, var(--ca-medium-dark-color));
-  --border-color: var(--gray-800, var(--ca-medium-dark-color));
-  --a-color: var(--blue-800, var(--ca-blue-color));
-  --sidebar-background: var(--black, var(--ca-black-color));
-  --sidebar-text: var(--text-color, var(--ca-lighter-text-color));
+  --template-background: #191818;
+  --template-hover-background: #121212;
+  --template-favourite: #333333;
+  --hr-color: #2b2b2b;
+  --border-color: #2b2b2b;
+  --a-color: #00b8d6;
+  --sidebar-background: #000000;
+  --sidebar-text: #f2f2f2;
   --beta-popup-offset: 5rem;
-  --support-popup-text: var(--black, var(--ca-black-color));
-  --support-popup-background: var(--white, var(--ca-white-color));
-  --mod-comment-border: var(--red-800, var(--ca-red-color));
-  --sidebar-close-background: var(--black-opacity-70, var(--ca-overlay-color));
-  --unraid-66-color: var(--orange-500, var(--ca-orange-color));
-  --link-color: var(--link-text-color, var(--ca-blue-color));
-  --ca-legacy-background-color: var(--background-color, var(--ca-legacy-bg-dark));
+  --support-popup-text: #000000;
+  --support-popup-background: #ffffff;
+  --mod-comment-border: #cf3131;
+  --sidebar-close-background: rgba(0,0,0,0.7);
+  --unraid-66-color: var(--orange-500,#FF8C2F);
+  --link-color: #486dba;
+  --ca-legacy-background-color: var(--background-color,#1d1b1b);
   --search-area-top: 4rem;
   --search-area-left: 19.5rem;
   --search-area-mobile-left: initial;
   --search-area-mobile-top: 0;
-  --menu-background: var(--background-color, var(--ca-legacy-bg-dark));
+  --menu-background: var(--background-color,#1d1b1b);
   --menu-opacity: 0.7;
-  --tooltipster-content: var(--text-color, var(--ca-lighter-text-color));
-  --chart-grid: var(--gray-800, var(--ca-medium-dark-color));
+  --tooltipster-content: #f2f2f2;
+  --chart-grid: #222222;
 } 
 
 /* Use a background color on black theme to solve "invisible" icons */
 img.ca_displayIcon, img.popupIcon {
-  background-color: var(--gray-600, var(--ca-icon-bg-dark));
+  background-color: var(--gray-600,#404040);
   border-radius: 1rem 1rem 1rem 1rem;
 }
